# KioArch

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  GEMINI.md  LICENSE  README.md  build.gradle.kts  gradle.properties  renovate.json  settings.gradle.kts  test-trigger.txt
.agent/rules/: git-commit-rules.md  kioarch-pitfalls.md  language-strategies.md  senior-engineer-conduct.md
.agent/workflows/: ask.md  explain.md  issue.md  plan.md  review.md
.github/: java-gradle.json  labels.yml  lint-matrix.json  release-drafter.yml
.github/workflows/: autolabeler.yml  build.yml  ci.yml  label-sync.yml  lint.yml  publish.yml  release-drafter.yml  test.yml
.run/: detaktAll.run.xml  detekt(ci).run.xml
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: CompileIosNativesTask.kt  CompileJvmNativesTask.kt  CompileNativeExtension.kt  CompileWasmNativesTask.kt  TargetOs.kt  VersionParser.kt  kioarch.detekt.gradle.kts  kioarch.natives.gradle.kts  kioarch.testing.gradle.kts  kioarch.versioning.gradle.kts
build-logic/src/test/kotlin/: VersionParserTest.kt
config/detekt/: detekt.yml
gradle/: libs.versions.toml
kioarch/: build.gradle.kts  consumer-rules.pro
kioarch/android/: build.gradle.kts  consumer-rules.pro
kioarch/karma.config.d/: karma.conf.js
kioarch/src/androidDeviceTest/kotlin/com/sorrowblue/kioarch/: AndroidKioArchTest.kt  ArchiveReaderAndroidTest.kt  ByteArraySeekableSourceAndroidTest.kt
kioarch/src/androidHostTest/kotlin/com/sorrowblue/kioarch/: AndroidHostKioArchTest.kt
kioarch/src/androidJvmMain/kotlin/com/sorrowblue/kioarch/: DirectSeekableSource.kt  FileSeekableSource.kt  KioArchJni.kt  PathSeekableSource.kt  SeekableArchiveReader.kt
kioarch/src/androidJvmTest/kotlin/com/sorrowblue/kioarch/: HostTestNativeLoader.kt  KioArchTest.kt
kioarch/src/androidMain/: AndroidManifest.xml
kioarch/src/androidMain/kotlin/com/sorrowblue/kioarch/: KioArch.android.kt  KioArchInitializer.kt  KioArchJni.kt  ParcelFileDescriptorSeekableSource.kt
kioarch/src/commonMain/kotlin/com/sorrowblue/kioarch/: ArchiveEntry.kt  ArchiveException.kt  ArchiveFormat.kt  ArchiveReader.kt  ByteArraySeekableSource.kt  Bzip2ArchiveReader.kt  DataSink.kt  KioArch.kt  SeekableSource.kt
kioarch/src/commonTest/kotlin/com/sorrowblue/kioarch/: ArchiveReaderTestSpec.kt  ByteArraySeekableSourceTestSpec.kt
kioarch/src/cpp/: CMakeLists.txt  kioarch_ios.c  kioarch_ios.h  kioarch_jni.c
kioarch/src/iosMain/kotlin/com/sorrowblue/kioarch/: KioArch.ios.kt
kioarch/src/iosTest/kotlin/com/sorrowblue/kioarch/: ArchiveReaderIosTest.kt  ByteArraySeekableSourceIosTest.kt  KioArchIosTest.kt
kioarch/src/jsMain/kotlin/com/sorrowblue/kioarch/: KioArch.js.kt  KioArchExt.js.kt  KioArchModule.js.kt
kioarch/src/jsTest/kotlin/com/sorrowblue/kioarch/: ArchiveReaderJsTest.kt  ByteArraySeekableSourceJsTest.kt  KioArchJsTest.kt  TestFileHelper.kt
kioarch/src/jvmMain/kotlin/com/sorrowblue/kioarch/: FileSeekableSource.kt  KioArch.jvm.kt  KioArchJni.kt  NativeLoader.kt
kioarch/src/jvmTest/kotlin/com/sorrowblue/kioarch/: ArchiveReaderTest.kt  ByteArraySeekableSourceTest.kt  HostTestNativeLoader.kt  KioArchTest.kt  LargeTestFileGenerator.kt  TestFileGenerator.kt
kioarch/src/nativeInterop/cinterop/: kioarch.def
kioarch/src/wasmJsMain/kotlin/com/sorrowblue/kioarch/: KioArch.wasmJs.kt  KioArchExt.wasmJs.kt  KioArchModule.wasmJs.kt  WasmJsInterop.kt
kioarch/src/wasmJsTest/kotlin/com/sorrowblue/kioarch/: ArchiveReaderWasmTest.kt  ByteArraySeekableSourceWasmTest.kt  KioArchWasmTest.kt  TestFileHelper.kt
kioarch/src/webMain/kotlin/com/sorrowblue/kioarch/: KioArchExt.kt  KioArchModule.kt
sample/: build.gradle.kts
sample/android/: build.gradle.kts
sample/android/src/androidTest/java/com/sorrowblue/kioarch/sample/: StorageAccessFrameworkIntegrationTest.kt
sample/android/src/main/: AndroidManifest.xml
sample/android/src/main/java/com/sorrowblue/android/: MainActivity.kt
sample/android/src/main/java/com/sorrowblue/kioarch/sample/: MainActivity.kt
sample/android/src/main/res/values/: strings.xml  themes.xml
sample/ios/KioArchSample/: ContentView.swift  KioArchSampleApp.swift
sample/ios/KioArchSample.xcodeproj/: project.pbxproj
sample/jvm/: build.gradle.kts
sample/src/androidMain/kotlin/com/sorrowblue/kioarch/sample/: KioarchSampleApp.android.kt  PlatformContext.android.kt  Typography.android.kt
sample/src/androidMain/kotlin/com/sorrowblue/kioarch/sample/components/: EntryList.android.kt  ImageDecoder.android.kt
sample/src/commonMain/kotlin/com/sorrowblue/kioarch/sample/: ArchiveDashboard.kt  ArchiveDashboardState.kt  KioarchSampleApp.kt  MainViewModel.kt  PlatformContext.kt
sample/src/jvmMain/kotlin/com/sorrowblue/kioarch/sample/: PlatformContext.jvm.kt  Typography.jvm.kt
sample/src/wasmJsMain/kotlin/com/sorrowblue/kioarch/sample/: Typography.wasmJs.kt
sample/src/webMain/kotlin/com/sorrowblue/kioarch/sample/: KioarchSampleApp.web.kt  PlatformContext.web.kt  Typography.web.kt
sample/web/: build.gradle.kts
sample/web/src/commonMain/resources/: styles.css
sample/web/src/wasmJsMain/resources/: index.html  styles.css
sevenzip/: build.gradle.kts
sevenzip/src/androidMain/kotlin/com/antigravity/sevenzip/: SevenZipJni.kt  SevenZipMultiplatform.android.kt
sevenzip/src/commonMain/kotlin/com/antigravity/sevenzip/: ArchiveEntry.kt  ArchiveReader.kt  DataSink.kt  SeekableSource.kt  SevenZipMultiplatform.kt
sevenzip/src/cpp/: CMakeLists.txt  sevenzip_jni.c
sevenzip/src/jvmMain/kotlin/com/antigravity/sevenzip/: FileSeekableSource.kt  NativeLoader.kt  SevenZipJni.kt  SevenZipMultiplatform.jvm.kt
sevenzip/src/jvmTest/kotlin/com/antigravity/sevenzip/: SevenZipTest.kt
(+43 files in other folders)
